apps/node/nest-app/k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-nest-app
  labels:
    app: node-nest-app
spec:
  replicas: 1

  template:
    metadata:
      name: node-nest-app
      labels:
        app: node-nest-app
    spec:
      serviceAccountName: node-nest-app
      restartPolicy: Always
      containers:
        - name: node-nest-app
          image: yurikrupnik/node-nest-app:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /app/assets
              name: proto-configs
      volumes:
        - name: proto-configs
          configMap:
            name: proto-configs
            items:
              - key: users.proto
                path: users.proto
  selector:
    matchLabels:
      app: node-nest-app
