apps/node/nest-app/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-nest-app-service
  labels:
    run: node-nest-app-service
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: node-nest-app
